# Aviation-AI-Agent

./: README.md  app_gradio_agent.py  flight_data_adapter.py  generate_workflow_graph.py  pdf_to_markdown_converter.py  pyproject.toml  seoul_flight.py  simple_aivation_chatbot.py  vector_database.py
airplane_data/: A320-MSFS-Manual.pdf.md
airplane_data/md/aip/: RKSI-TEXT.md  RKSM-TEXT.md  RKSS-TEXT.md
airplane_data/md/manuals/: B747-8i-Tutorial-Flight-v1.md  FSX FSLabs A320 Guide.md  FSX PMDG 737-800 NG Guide.md  P3D PMDG 747-400 Guide.md  P3D PMDG 777-200 LR Guide.md
vectorstore/aviation_chroma/: metadata.json
vectorstore/aviation_chroma/6eda01c0-2466-4972-9f56-63843a08fd65/: index_metadata.pickle
