[project]
name = "llm-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.48.0",
    "faiss-cpu>=1.12.0",
    "gradio>=5.44.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "matplotlib>=3.10.5",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.0",
    "webdriver-manager>=4.0.2",
]
